--- a/HACK-7.0-CODEFEST-2025.html
+++ b/HACK-7.0-CODEFEST-2025.html
@@ -227,7 +227,7 @@
           <span><i class="fa-solid fa-wifi"></i> Fully Online</span>
         </div>
         <p>Kickoff Nov 28 @ 10 PM EST and build through Dec 6 with mentor hours, checkpoints, and async support.</p>
-        <p>Full event details and prizes will be unveiled on <strong>Nov 28, 2025</strong>.</p>
+        <!-- <p>Full event details and prizes will be unveiled on <strong>Nov 28, 2025</strong>.</p> -->
         <div class="row">
           <a class="btn" href="https://codecrunchglobal.vercel.app/HACK-7.1-CodeFest25-sa.html">Online Session Details</a>
         </div>
@@ -244,7 +244,7 @@
         </div>
         <p>One-day onsite sprint with workshops, mentors, judging, and live demos.</p>
 
-        <p>Full event details and prizes will be unveiled on <strong>Nov 27, 2025</strong>.</p>
+        <!-- <p>Full event details and prizes will be unveiled on <strong>Nov 27, 2025</strong>.</p> -->
         <div class="row">
           <a class="btn" href="https://codecrunchglobal.vercel.app/HACK-7.2-CodeFest25-sb.html">In-Person Session Details</a>
         </div>
