--- a/hackuniversity-perks1.html
+++ b/hackuniversity-perks1.html
@@ -503,13 +503,13 @@ async function checkStudentRegistrationStatus() {
       <strong style="color:#22c55e;font-size:1.05em;">🎉 Registration Found!</strong><br><br>
       Review your hackathon & business competition selections, then join our communities:
       <div class="cta">
-        <a class="cta-discord" href="${entry.discordJoinLink}" target="_blank">🚀 Join Discord</a>
+        <a class="cta-discord" href="${entry.discordJoinLink}" target="_blank">🚀 Join Hackathons & Business Arena Competition Discord</a>
         <a class="cta-groupme" href="${entry.groupmeLink}" target="_blank">👥 Join Hack University GroupMe</a>
-        <a class="cta-org" href="${entry.orgLinks.codeCrunch}" target="_blank">💻 Join Code Crunch</a>
-        <a class="cta-org" href="${entry.orgLinks.gdgAtFiu}" target="_blank">🌐 GDG @ FIU</a>
-        <a class="cta-org" href="${entry.orgLinks.colorStackFiu}" target="_blank">🎨 ColorStack @ FIU</a>
-        <a class="cta-org" href="${entry.orgLinks.cahsiFiu}" target="_blank">📚 CAHSI @ FIU</a>
-        <a class="cta-org" href="${entry.orgLinks.raspberryPiFiu}" target="_blank">🍓 Raspberry Pi Code Crunch</a>
+        <a class="cta-org" href="${entry.orgLinks.codeCrunch}" target="_blank">💻 Join Code Crunch Worlwide Discord</a>
+        <a class="cta-org" href="${entry.orgLinks.gdgAtFiu}" target="_blank">🌐 Google Developer Group at FIU (GDG at FIU) Discord</a>
+        <a class="cta-org" href="${entry.orgLinks.colorStackFiu}" target="_blank">🎨 ColorStack at FIU Discord</a>
+        <a class="cta-org" href="${entry.orgLinks.cahsiFiu}" target="_blank">📚 CAHSI at FIU Discord</a>
+        <a class="cta-org" href="${entry.orgLinks.raspberryPiFiu}" target="_blank">🍓 Raspberry Pi Code Crunch Discord</a>
         <a class="cta-membership" href="${entry.membershipPortal}" target="_blank">🏅 Get Membership Certificate</a>
       </div>
     </div>
