--- a/hackuniversity-onestopformnewcopy.html
+++ b/hackuniversity-onestopformnewcopy.html
@@ -211,11 +211,9 @@
         <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
           Hack University — OneStop Portal (Student Portal)
         </h1>
-
+        <br>
         <!-- OneStop Form tagline -->
-        <p class="mt-2 text-sm sm:text-base text-gray-700 font-semibold">
-          Hack University — OneStop Form
-        </p>
+
         <p class="text-gray-600 max-w-3xl">
           One place to join our organizations, community platforms, register for upcoming hackathons &amp; Business Venture Arena,
           and sync important dates to your calendar.
@@ -266,10 +264,10 @@
 
         <!-- Card header: OneStop Portal title + CTAs -->
         <div class="flex flex-col md:flex-row md:items-start md:justify-between gap-5">
-          <!-- Left: main text -->
-          <div class="space-y-2 md:max-w-xl">
+         <div class="space-y-2 md:max-w-xl mx-auto text-center">
+
             <h2 class="text-xl sm:text-2xl font-extrabold tracking-tight text-gray-900">
-              All-In-One Student Access — Membership, Hackathons &amp; Business Venture Arena
+              All-In-One Student Access Portal
             </h2>
             <p class="text-sm sm:text-base text-gray-700">
               Verify your membership, manage hackathon and Business Venture Arena registrations,
@@ -277,16 +275,16 @@
               participation — all using the same Gmail account you used on the OneStop Form.
             </p>
             <p class="text-xs text-gray-500 mt-1">
-              <strong>Password Information:</strong>
+              <strong>Coming Soon — Password Login:</strong>
               By default, your login password is set to your registered email.
               You may update your password anytime by signing in and submitting an update
               through the OneStop Form.
             </p>
-          </div>
 
-          <!-- Right: primary CTAs -->
-          <div class="flex flex-col gap-2 md:w-64">
-            <a
+
+
+
+                      <a
               href="https://hackuniversity-onestopform.vercel.app/"
               class="inline-flex items-center justify-center gap-2 px-4 py-2 rounded-lg bg-emerald-500 text-white text-sm font-semibold shadow-sm hover:bg-emerald-600 transition"
             >
@@ -298,9 +296,17 @@
               class="inline-flex items-center justify-center gap-2 px-4 py-2 rounded-lg border border-emerald-500 text-emerald-700 bg-white text-sm font-semibold shadow-sm hover:bg-emerald-50 transition"
             >
               <i class="fa-solid fa-pen-to-square"></i>
-              Update My Information / Hackathon Registration
+              Update My OneStopForm Information
             </a>
+
+
+
+
+
+
           </div>
+
+
         </div>
 
         <hr class="my-6 border-gray-200" />
