--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -181,14 +181,15 @@
 <nav class="navbar">
   <div class="nav-container">
     <div class="nav-brand">
-      <a href="https://codecrunchglobal.vercel.app" target="_blank" rel="noopener">
-        <strong>Code Crunch</strong>
+      <a href="http://hackuniversity.vercel.app/" target="_blank" rel="noopener">
+        <strong>Hack University</strong>
       </a>
     </div>
     <div class="nav-links">
+      <a href="https://gdgatfiu.vercel.app/" class="nav-link">Google Developer Group at FIU</a>
+      <a href="https://codecrunchglobal.vercel.app/" class="nav-link">Code Crunch Worldwide</a>
       <a href="https://colorstackatfiu.vercel.app/" class="nav-link">ColorStack at FIU</a>
       <a href="https://cahsiatfiu.vercel.app/" class="nav-link">CAHSI at FIU</a>
-      <a href="https://gdgatfiu.vercel.app/" class="nav-link">Google Developer Group at FIU</a>
       <a href="https://raspberrypicodecrunch.vercel.app/" class="nav-link">Raspberry Pi Code Crunch</a>
       <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" class="nav-link">Support Us</a>
     </div>
