--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -210,7 +210,7 @@
         </p>
 
         <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
-          Hack University — OneStop Portal (Student Portal)
+          Hack University — OneStop Portal Student Portal
         </h1>
         <br>
         <!-- OneStop Form tagline -->
@@ -290,14 +290,14 @@
               class="inline-flex items-center justify-center gap-2 px-4 py-2 rounded-lg bg-emerald-500 text-white text-sm font-semibold shadow-sm hover:bg-emerald-600 transition"
             >
               <i class="fa-solid fa-user-plus"></i>
-              New here? Complete the OneStop Registration
+              New here? Complete the OneStop Form Registration
             </a>
             <a
               href="https://hackuniversity-onestopform.vercel.app/"
               class="inline-flex items-center justify-center gap-2 px-4 py-2 rounded-lg border border-emerald-500 text-emerald-700 bg-white text-sm font-semibold shadow-sm hover:bg-emerald-50 transition"
             >
               <i class="fa-solid fa-pen-to-square"></i>
-              Update My OneStopForm Information
+              Update My OneStop Form Information
             </a>
 
 
