--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -268,7 +268,7 @@
          <div class="space-y-2 md:max-w-xl mx-auto text-center">
 
             <h2 class="text-xl sm:text-2xl font-extrabold tracking-tight text-gray-900">
-              All-In-One Student Access Portal
+              All-In-One Student Access
             </h2>
             <p class="text-sm sm:text-base text-gray-700">
               Verify your membership, manage hackathon and Business Venture Arena registrations,
