--- a/colorstackwinterhack2025.html
+++ b/colorstackwinterhack2025.html
@@ -28,7 +28,7 @@
   <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/0/03/ColorStack_wordmark.png" />
   <meta name="twitter:image:alt" content="ColorStack Winter Hackathon" />
 
-  <!-- Structured Data (Google Rich Results) -->
+  <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -91,14 +91,14 @@
   </section>
 
   <!-- LOGO STRIP -->
-  <section class="bg-white">
+  <!-- <section class="bg-white">
     <div class="max-w-5xl mx-auto px-6">
       <div class="rounded-2xl border border-gray-100 shadow-sm p-6 md:p-8 bg-white mt-6 text-center">
         <p class="text-sm text-gray-500 mb-4">Presented by ColorStack</p>
         <img class="h-12 mx-auto" src="https://upload.wikimedia.org/wikipedia/commons/0/03/ColorStack_wordmark.png" alt="ColorStack wordmark" />
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- ABOUT -->
   <section class="bg-blue-50">
@@ -107,9 +107,135 @@
       <p class="mt-4 text-lg text-gray-700 leading-relaxed">
         Beginners and experienced hackers welcome. Learn, create, and ship projects with the ColorStack community.
       </p>
-      <a href="https://colorstackhack25.vercel.app/" class="inline-block mt-6 bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold transition">
-        Event Page Coming Soon
+      <a href="https://codecrunchglobal.vercel.app/colorstackwinterhack2025-guide.html" class="inline-block mt-6 bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold transition">
+       Hacker Guide
       </a>
+    </div>
+  </section>
+
+  <!-- ============================= -->
+  <!-- NEW OVERVIEW SECTION INSERTED -->
+  <!-- ============================= -->
+  <section class="py-16 bg-white" id="overview">
+    <div class="max-w-4xl mx-auto px-6">
+
+      <h2 class="text-3xl md:text-4xl font-bold text-gray-900 text-center">Overview</h2>
+      <p class="mt-4 text-lg text-gray-700 leading-relaxed text-center">
+        Have free time during break and wondering how to spend it? We got you.
+        ColorStack is hosting a Winter Break Hackathon! Build and ship a project to
+        production with other ColorStack members.
+      </p>
+
+      <!-- Timeline -->
+      <div class="mt-12">
+        <h3 class="text-2xl font-semibold text-gray-900">When</h3>
+        <p class="mt-3 text-gray-700 leading-relaxed">
+          The hackathon will be open from <strong>Friday, Dec 19</strong> to
+          <strong>Monday, Jan 12</strong>.
+        </p>
+
+        <ul class="mt-4 space-y-2 text-gray-700">
+          <li>• <strong>Mon, Dec 15:</strong> Kick-off meeting via Zoom</li>
+          <li>• <strong>Fri, Dec 19:</strong> Hackathon officially starts</li>
+          <li>• <strong>Mon, Jan 12:</strong> Submissions due</li>
+          <li>• Live Expo — tentative on Jan 15</li>
+          <li>• <strong>Fri, Jan 16:</strong> Finalists announced</li>
+          <li>• <strong>Fri, Jan 23:</strong> Finalists present at the Spring Career Fair</li>
+        </ul>
+      </div>
+
+      <!-- Teams -->
+      <div class="mt-12">
+        <h3 class="text-2xl font-semibold text-gray-900">Teams</h3>
+        <p class="mt-3 text-gray-700 leading-relaxed">
+          Teams will consist of <strong>1–4 ColorStack members</strong>.
+          Solo projects are allowed, but collaboration is encouraged!
+        </p>
+      </div>
+
+      <!-- Project Requirements -->
+      <div class="mt-12">
+        <h3 class="text-2xl font-semibold text-gray-900">Project Requirements</h3>
+        <p class="mt-3 text-gray-700 leading-relaxed">
+          Your project must be <strong>publicly accessible</strong>.  
+          Example: If you build a web app, we should be able to open the live URL.
+        </p>
+      </div>
+
+      <!-- Submissions -->
+      <div class="mt-12">
+        <h3 class="text-2xl font-semibold text-gray-900">Submissions</h3>
+        <p class="mt-3 text-gray-700 leading-relaxed">
+          All submissions are due on <strong>Friday, Jan 12 @ 11:59 PM PT</strong>.
+        </p>
+      </div>
+
+      <!-- Prizes -->
+      <div class="mt-12">
+        <h3 class="text-2xl font-semibold text-gray-900">Prizes</h3>
+        <p class="mt-3 text-gray-700 leading-relaxed">
+          Finalists will be selected in the following categories:
+        </p>
+
+        <ul class="mt-4 space-y-1 text-gray-700">
+          <li>• Best Overall</li>
+          <li>• Most Commercially Viable</li>
+          <li>• People’s Choice</li>
+          <li>• Best Underclassmen (100% underclassmen team)</li>
+        </ul>
+
+        <p class="mt-4 text-gray-700">
+          Each finalist receives a <strong>$100 gift card</strong> of their choice  
+          (ColorStack Merch, DoorDash, etc.).
+        </p>
+      </div>
+
+      <!-- Presentations -->
+      <div class="mt-12">
+        <h3 class="text-2xl font-semibold text-gray-900">Presentations</h3>
+        <p class="mt-3 text-gray-700 leading-relaxed">
+          The lead from each winning team will present at the
+          <strong>Spring Career Fair on Friday, Jan 23</strong> (time TBD).
+        </p>
+      </div>
+
+      <!-- Beyond the Hackathon -->
+      <div class="mt-12">
+        <h3 class="text-2xl font-semibold text-gray-900">Beyond the Hackathon</h3>
+        <p class="mt-3 text-gray-700 leading-relaxed">
+          Teams that make their project open source and continue development will have their
+          hosting & infrastructure costs covered by ColorStack for a full year.
+        </p>
+      </div>
+
+      <!-- FAQ -->
+      <div class="mt-16">
+        <h3 class="text-3xl font-bold text-gray-900 text-center">FAQ</h3>
+
+        <div class="mt-8">
+          <h4 class="text-xl font-semibold text-gray-900">Is there a hackathon theme?</h4>
+          <p class="mt-2 text-gray-700">
+            No theme — build whatever you want.  
+            The best ideas solve a real problem or need.
+          </p>
+        </div>
+
+        <div class="mt-8">
+          <h4 class="text-xl font-semibold text-gray-900">Is there a Slack channel?</h4>
+          <p class="mt-2 text-gray-700">
+            Yes — join the <strong>#winter-break-hackathon</strong> channel!
+          </p>
+        </div>
+
+        <div class="mt-8">
+          <h4 class="text-xl font-semibold text-gray-900">Will organizers be available?</h4>
+          <p class="mt-2 text-gray-700">
+            The ColorStack team will be <strong>OOO from Dec 22 to Jan 5</strong>.  
+            The community will still be available to support you.
+          </p>
+        </div>
+      </div>
+
     </div>
   </section>
 
