--- a/2026-305hackjan2026 copy 3.html
+++ b/2026-305hackjan2026 copy 3.html
@@ -470,9 +470,24 @@
         <i class="fa-regular fa-folder-open"></i>&nbsp; Devpost Event Page
       </a>
 
+      <a class="btn alt" data-url="hackerGuide">
+        <i class="fa-solid fa-book-open"></i>&nbsp; Hacker Guide &amp; Toolkit
+      </a>
+
+        <!-- New buttons -->
+      <a class="btn" data-url="photoAlbum">
+        <i class="fa-solid fa-photo-film"></i>&nbsp; Photo Album &amp; Project Gallery
+      </a>
+      <a class="btn" data-url="perks">
+        <i class="fa-solid fa-gift"></i>&nbsp; Perks &amp; Credits
+      </a>
+      <a class="btn" data-url="prizes">
+        <i class="fa-solid fa-trophy"></i>&nbsp; Prizes Overview
+      </a>
+
       <!-- Kickoff buttons -->
       <a class="btn" data-url="kickoffA" data-toggle="kickoffAEnabled">
-        <i class="fa-solid fa-door-open"></i>&nbsp; Kickoff — Session A (Online)
+        <i class="fa-solid fa-door-open"></i>&nbsp; Kickoff — Session A (Online Zoom)
       </a>
       <a class="btn" data-url="kickoffB" data-toggle="kickoffBEnabled">
         <i class="fa-solid fa-door-open"></i>&nbsp; Kickoff — Session B (In-Person)
@@ -480,7 +495,7 @@
 
       <!-- Closing ceremony buttons -->
       <a class="btn alt" data-url="closingA" data-toggle="closingAEnabled">
-        <i class="fa-solid fa-flag-checkered"></i>&nbsp; Closing &amp; Live Demos — Session A &amp; B
+        <i class="fa-solid fa-flag-checkered"></i>&nbsp; Hybrid Closing &amp; Live Demos — Session A &amp; B (Zoom)
       </a>
 
       <!-- Pre-event & hybrid workshops (combined) -->
@@ -546,10 +561,10 @@
           <i class="fa-solid fa-list-check"></i>&nbsp; OneStop Registration (required for perks: APIs, subscriptions, credits)
         </a>
         <a class="btn alt" data-url="bevy" data-toggle="bevyEnabled">
-          <i class="fa-regular fa-calendar-check"></i>&nbsp; Bevy Calendar RSVP
+          <i class="fa-regular fa-calendar-check"></i>&nbsp; Bevy Calendar RSVP (required)
         </a>
         <a class="btn alt" data-url="devpost">
-          <i class="fa-solid fa-code-branch"></i>&nbsp; Devpost Registration (required for submissions &amp; gallery)
+          <i class="fa-solid fa-code-branch"></i>&nbsp; Devpost Registration (required for submissions &amp; project gallery)
         </a>
       </div>
 
@@ -1076,7 +1091,13 @@
     mlh: 'https://codecrunchglobal.vercel.app/comingsoon/coming-soon.html',
     instagramGroup: 'https://hackuniversityplatforms.vercel.app/',
     groupme: 'https://hackuniversityplatforms.vercel.app/',
+    hackerGuide: 'https://hackuniversity-hackerguide.vercel.app',
 
+
+     // NEW: photo album + prizes
+      photoAlbum: 'http://Hackuniversity-hub.vercel.app',          // update with your real gallery URL
+      prizes: 'http://Hackuniversity-hub.vercel.app',              // or the specific Devpost prizes URL
+   
     // Footer + social links
     hackuniversityInstagram: 'https://www.instagram.com/codecrunchclub/',
     hackuniversityLinkedin: 'https://www.linkedin.com/company/hack-university-worldwide',
@@ -1094,6 +1115,8 @@
     hackuniversityMission: 'https://hackuniversity.vercel.app/',
     hackuniversityHomepage: 'https://hackuniversity.vercel.app/',
 
+
+    // http://HackUniversity-hub.vercel.app
     // Kickoff / closing / workshops (Zoom / router hub)
     kickoffA: 'https://hackuniversity-zoom.vercel.app/',          // Online kickoff — Session A
     kickoffB: 'https://hackuniversity-zoom.vercel.app/',          // Hybrid/Zoom support for in-person kickoff
