--- a/2026-305hackjan2026.html
+++ b/2026-305hackjan2026.html
@@ -1081,7 +1081,7 @@
   // ===== GLOBAL URL OBJECT (single source of truth) =====
   const URLS = {
     // Core links
-    agenda: 'https://docs.google.com/document/d/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx/edit?usp=sharing',  // TODO: replace with Jan 2026 agenda
+    agenda: 'HackUniversity-Agenda.vercel.app',  // TODO: replace with Jan 2026 agenda
     devpost: 'https://305hackjan2026.devpost.com/',                                                       // TODO: replace with actual Devpost 'https://305hackjan2026.devpost.com/',  
     onestop: 'https://hackuniversity-registration.vercel.app/',                                           // OneStop Form
     bevy: 'https://gdg.community.dev/e/my5cad/',                                                       // TODO: replace with Bevy event
