--- a/colorstackwinterhack2025-guide.html
+++ b/colorstackwinterhack2025-guide.html
@@ -68,7 +68,7 @@
       </h2>
       <p class="mt-4 text-lg text-gray-700 leading-relaxed">
         The hackathon theme & resources are <strong>hidden</strong> until the
-        <strong>Closing Ceremony on Dec 15 @ 3:00 PM EST</strong>.
+        <strong>Opening Ceremony on Dec 15 @ 3:00 PM EST</strong>.
       </p>
       <p class="mt-2 text-gray-600">
         This page will <strong>auto-unveil</strong> the theme & resources at the ceremony time.
