--- a/colorstackwinterhack2025.html
+++ b/colorstackwinterhack2025.html
@@ -155,8 +155,8 @@
         </p>
 
         <ul class="mt-4 space-y-2 text-gray-700">
-          <li>• <strong>Mon, Dec 15:</strong> Closing Ceremony (Theme + Awards Reveal) @ <strong>3:00 PM EST</strong></li>
-          <li>• <strong>Fri, Dec 19:</strong> Hackathon officially starts</li>
+          <li>• <strong>Fri, Dec 19:</strong> Hackathon officially starts for Team Formation & Networking</li>
+          <li>• <strong>Mon, Dec 15:</strong> Opening Ceremony (Theme + Awards Reveal) @ <strong>3:00 PM EST</strong></li>
           <li>• <strong>Mon, Jan 12:</strong> Submissions due</li>
           <li>• Live Expo — tentative on Jan 15</li>
           <li>• <strong>Fri, Jan 16:</strong> Finalists announced</li>
@@ -169,7 +169,7 @@
         <h3 class="text-2xl font-semibold text-gray-900">Theme</h3>
         <p class="mt-3 text-gray-700 leading-relaxed">
           The hackathon theme is <strong>hidden</strong> and will be unveiled live at the
-          <strong>Closing Ceremony on Dec 15 @ 3:00 PM EST</strong>.
+          <strong>Opening Ceremony on Dec 15 @ 3:00 PM EST</strong>.
         </p>
       </div>
 
@@ -230,8 +230,8 @@
         </ul>
 
         <p class="mt-4 text-gray-700">
-          <strong>Category awards</strong> will be <strong>unveiled at the Closing Ceremony</strong>
-          (<strong>Dec 15 @ 3:00 PM EST</strong>).
+          <strong>Category awards</strong> will be <strong>unveiled at the Opening Ceremony</strong>
+          (<strong>Mon, Dec 15 @ 3:00 PM EST</strong>).
         </p>
 
         <p class="mt-4 text-gray-700">
