--- a/colorstackwinterhack2025.html
+++ b/colorstackwinterhack2025.html
@@ -91,7 +91,7 @@
 
       <!-- Ceremony time reference (this is when theme + awards unlock) -->
       <div class="p-6 border border-gray-200 rounded-2xl shadow-sm text-center">
-        <h3 class="font-semibold text-lg">Closing Ceremony</h3>
+        <h3 class="font-semibold text-lg">Opening Ceremony</h3>
         <p class="mt-2 text-gray-600">
           Dec 15 @ 3:00 PM EST<br/>
           Theme & Awards Reveal
@@ -110,7 +110,7 @@
         <!-- Locked state -->
         <p class="mt-2 text-gray-600" id="themeCardLocked">
           Hidden until the<br/>
-          <strong>Closing Ceremony</strong>
+          <strong>Opening Ceremony</strong>
         </p>
 
         <!-- Revealed state -->
@@ -155,8 +155,13 @@
         </p>
 
         <ul class="mt-4 space-y-2 text-gray-700">
-          <li>• <strong>Fri, Dec 19:</strong> Hackathon officially starts for Team Formation & Networking</li>
           <li>• <strong>Mon, Dec 15:</strong> Opening Ceremony (Theme + Awards Reveal) @ <strong>3:00 PM EST</strong></li>
+          <li>
+            • <strong>Fri, Dec 15–19:</strong> Team Formation & Networking — brainstorming and idea exploration, 
+            defining project concepts, evaluating and refining ideas, assigning team roles and responsibilities, 
+            and discussing each team member’s strengths and how they contribute to building the project.
+          </li>
+          <li>• <strong>Fri, Dec 19:</strong> Hackathon officially starts</li>
           <li>• <strong>Mon, Jan 12:</strong> Submissions due</li>
           <li>• Live Expo — tentative on Jan 15</li>
           <li>• <strong>Fri, Jan 16:</strong> Finalists announced</li>
@@ -268,7 +273,7 @@
           <!-- FAQ LOCKED -->
           <p class="mt-2 text-gray-700" id="faqThemeLocked">
             Yes — but it’s <strong>hidden</strong> until the
-            <strong>Closing Ceremony on Dec 15 @ 3:00 PM EST</strong>.
+            <strong>Opening Ceremony on Mon Dec 15 @ 3:00 PM EST</strong>.
           </p>
 
           <!-- FAQ REVEALED -->
