--- a/colorstackwinterhack2025.html
+++ b/colorstackwinterhack2025.html
@@ -89,6 +89,16 @@
         <p class="mt-2 text-gray-600">Dec 19, 2025 — Jan 12, 2026</p>
       </div>
 
+
+      <!-- Prep time reference (planning + team formation) -->
+    <div class="p-6 border border-gray-200 rounded-2xl shadow-sm text-center">
+      <h3 class="font-semibold text-lg">Prep Time</h3>
+      <p class="mt-2 text-gray-600">
+        Dec 15–18<br/>
+        Team formation, brainstorming, role assignments, and idea refinement
+      </p>
+    </div>
+
       <!-- Ceremony time reference (this is when theme + awards unlock) -->
       <div class="p-6 border border-gray-200 rounded-2xl shadow-sm text-center">
         <h3 class="font-semibold text-lg">Opening Ceremony</h3>
