--- a/colorstackwinterhack2025.html
+++ b/colorstackwinterhack2025.html
@@ -95,7 +95,7 @@
       <h3 class="font-semibold text-lg">Prep Time</h3>
       <p class="mt-2 text-gray-600">
         Dec 15–18<br/>
-        Team formation, brainstorming, role assignments, and idea refinement
+        Team formation, role assignments, etc.
       </p>
     </div>
 
