--- a/colorstackwinterhack2025.html
+++ b/colorstackwinterhack2025.html
@@ -160,14 +160,14 @@
       <div class="mt-12">
         <h3 class="text-2xl font-semibold text-gray-900">When</h3>
         <p class="mt-3 text-gray-700 leading-relaxed">
-          The hackathon will be open from <strong>Friday, Dec 19</strong> to
-          <strong>Monday, Jan 12</strong>.
+          The hackathon will be open from <strong>Friday, Dec 19, 2025</strong> to
+          <strong>Monday, Jan 12. 2026</strong>.
         </p>
 
         <ul class="mt-4 space-y-2 text-gray-700">
           <li>• <strong>Mon, Dec 15:</strong> Opening Ceremony (Theme + Awards Reveal) @ <strong>3:00 PM EST</strong></li>
           <li>
-            • <strong>Fri, Dec 15–19:</strong> Team Formation & Networking — brainstorming and idea exploration, 
+            • <strong>Dec 15–19:</strong> Team Formation & Networking — brainstorming and idea exploration, 
             defining project concepts, evaluating and refining ideas, assigning team roles and responsibilities, 
             and discussing each team member’s strengths and how they contribute to building the project.
           </li>
