--- a/colorstackwinterhack2025.html
+++ b/colorstackwinterhack2025.html
@@ -226,7 +226,7 @@
       <div class="mt-12">
         <h3 class="text-2xl font-semibold text-gray-900">Submissions</h3>
         <p class="mt-3 text-gray-700 leading-relaxed">
-          All submissions are due on <strong>Friday, Jan 12 @ 11:59 PM PT</strong>.
+          All submissions are due on <strong>Friday, Jan 12 @ 11:59 PM EST</strong>.
         </p>
       </div>
 
